--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import-normalize; /* bring in normalize.css styles */
-@import url('./styles.css');
+/* @import url('./styles.css'); */
 
 body {
   margin: 0;
